@@ -117,6 +117,8 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  1FWG453: ITPJCORE:WIN98 - OpenOnSelection - fails for default constructors
+  1GDQD37: ITPJUI:WIN2000 - OpenOnSelection - Open on selection failure
   1GGZ2R7: ITPJUI:WIN2000 - Search for method refs failed
   1GKNXX6: ITPJCORE:WINNT - OpenOnSelection - no selection if targeting member type in default package
   1GE34EE: ITPJUI:WIN2000 - OpenOnSelection - initial selection wrong
